# comic-ocr

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt  requirements_dev.txt
comic_ocr/: __init__.py  hub.py  model.py
comic_ocr/models/: train_helpers.py  transforms.py
comic_ocr/types/: __init__.py  images.py  lines.py  shapes.py
comic_ocr/typing/: __init__.py  files.py  images.py  lines.py  shapes.py
comic_ocr/utils/: __init__.py  examples.py  files.py  nb_annotation.py  ploting.py  plotting.py  pytorch_model.py
example/: credits.md
example/manga_annotated/: normal_01.json  normal_02.json  normal_03.json  normal_04.json  xkcd_100.json
example/text/: texts.txt
manga_ocr/: __init__.py
manga_ocr/text/: transforms.py
manga_ocr/typing/: __init__.py  images.py  lines.py  shapes.py
manga_ocr/utils/: __init__.py  files.py  nb_annotation.py  pytorch_model.py
notebooks/: Create initial Annotated Dataset.ipynb  Generate Datasets.ipynb  Train Localization Mode (Baseline).ipynb  Train Localization Model.ipynb  Train Recognition Model (default, CRNN small).ipynb  Train Recognition Model.ipynb
scripts/: generate_manga_dataset.py
tests/: test_comic_ocr.py  test_hub.py  test_manga_ocr.py  test_model.py  test_model_local.py  test_trained_models.py
tests/dataset/: test_annotated_dataset.py  test_generated_dataset.py  test_generated_single_line_dataset.py  test_manga_generator.py
tests/generator/: test_manga_generator.py
tests/models/: test_localization.py  test_recognition.py  (+1 more)
trained_models/: localization.pth  recognition.pth
(+83 files in other folders)
