[tool.poetry]
name = "comic-ocr"
version = "0.1.1"
description = "An OCR library comic and manga"
authors = ["Wanasit "]
license = "MIT License"
packages = [
    { include = "comic_ocr" },
]
include = ["trained_models/*.*"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.11.0"
torchvision = "^0.12.0"
opencv-python = "^4.5.4.60"
numpy = "^1.21"
Pillow = "^9.1"
tqdm = "^4"

[tool.poetry.dev-dependencies]
pytest = "^7"
jupyter = "*"
matplotlib = "*"
labelling-notebook = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"