[tool.poetry]
name = "comic-ocr"
version = "0.1.3"
description = "An OCR library comic and manga"
authors = ["Wanasit T"]
license = "MIT License"
packages = [
    { include = "comic_ocr" },
]
include = []

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.12.1"
torchvision = "^0.13.1"
opencv-python = "^4.5.4.60"
numpy = "^1.21"
Pillow = "^9.1"
tqdm = "^4"
transformers = "^4.23.1"

[tool.poetry.dev-dependencies]
pytest = "^7"
jupyter = "*"
matplotlib = "*"
labelling-notebook = "*"
tensorboard = "*"
coverage = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"